--- a/open_web_calendar/static/css/dhtmlx/style.css
+++ b/open_web_calendar/static/css/dhtmlx/style.css
@@ -24,8 +24,9 @@
     display: inline-block;
 }
 
-#infoIcon {
+#infoIcon { 
     background-color: rgba(0,0,0,0.1);
+    display: none;
 }
 
 #errorStatusIcon {
