--- a/open_web_calendar/static/css/dhtmlx/dhtmlxscheduler.css
+++ b/open_web_calendar/static/css/dhtmlx/dhtmlxscheduler.css
@@ -2963,6 +2963,10 @@
     padding: 40px
 }
 
+.dhx_scheduler_agenda .dhx_cal_data{
+    padding-top:25px;
+}
+
 .dhx_year_wrapper {
     display: flex;
     gap: 40px;
