--- a/open_web_calendar/static/css/dhtmlx/dhtmlxscheduler.css
+++ b/open_web_calendar/static/css/dhtmlx/dhtmlxscheduler.css
@@ -2967,6 +2967,10 @@
     padding-top:25px;
 }
 
+/* * {
+    font-size: 0.8rem !important;
+} */
+
 .dhx_year_wrapper {
     display: flex;
     gap: 40px;
