--- a/open_web_calendar/static/css/dhtmlx/style.css
+++ b/open_web_calendar/static/css/dhtmlx/style.css
@@ -118,10 +118,10 @@ div.dhx_agenda_line>span {
     display: none;
 }
 
-
+/* 
 .dhx_cal_event_clear, .dhx_cal_month_table{
     transform:translateY(10px);
-}
+} */
 
 .dhx_cal_data {
     /* Custom scrollbar styling */
