--- a/open_web_calendar/static/css/dhtmlx/style.css
+++ b/open_web_calendar/static/css/dhtmlx/style.css
@@ -142,6 +142,9 @@ div.dhx_agenda_line>span {
     border-radius: 10px;
     border: 2px solid #f1f1f1;
 }
+.dhx_cal_quick_info {
+    width: fit-content;
+}
 
 @media only screen and (min-width: 1000px) {
     .dhx_cal_data {
