remove loader div from index.html

--- a/open_web_calendar/templates/calendars/dhtmlx.html
+++ b/open_web_calendar/templates/calendars/dhtmlx.html
@@ -58,7 +58,7 @@ SPDX-License-Identifier: GPL-2.0-only
             <div class="dhx_cal_header"></div>
             <div class="dhx_cal_data"></div>
         </div>
-        <div id="loader" class="fullsize"></div>
+        <!-- <div id="loader" class="fullsize"></div> -->
         <div id="errorWindow" class="hidden fullsize">
             <a class="closeButton" href="javascript:toggleErrorWindow();">X</a>
         </div>
